Make the text box monospace
At least for now while we don't have a sane line-wrapping story.

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -118,3 +118,6 @@ pre { padding: 0; margin: 0 }
 #reply-box > .close-button {
     float: right;
 }
+#reply-box textarea {
+    font-family: monospace;
+}
