--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -17,7 +17,8 @@ body {
   max-width: 700px;
   height: 100%;
   margin: 0 auto 0 auto;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: auto;
 }
 #messagelist:focus {
   outline: none;
