--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -26,6 +26,13 @@ body {
   margin: 0 auto 0 auto;
 }
 
+.message-placeholder {
+  margin: 0;
+  padding: 0;
+  height: 0;
+  width: 0;
+}
+
 pre { padding: 0; margin: 0 }
 .message {
   padding: 10px;
