Initial version of Angular-ified message view
This was such a pain. I really hope when we discover the Future of client-side
web application development, it's less complicated. Also more performant. Also
with considerably less god-awful documentation.

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -20,7 +20,8 @@ body {
   /* always show the scrollbar */
   overflow-y: scroll;
 }
-#messagelist {
+message-view {
+  display: block;
   height: 100%;
   max-width: 700px;
   margin: 0 auto 0 auto;
