--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -21,6 +21,11 @@ body {
   overflow-y: scroll;
 }
 
+.modal {
+  /* Okay, what is this double-scrollbar nonsense? */
+  overflow-y: auto;
+}
+
 /* More compact or something. */
 .form-group {
   margin-bottom: 5px;
