--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -75,7 +75,17 @@ pre { padding: 0; margin: 0 }
 }
 
 .message-personal {
-  border: 2px solid #483;
+  background-color: #e2ffd4;
+}
+.message-personal.message-selected {
+  background-color: #f1ffee;
+}
+.message-personal > .message-header {
+  background-color: inherit !important;
+  color: inherit !important;
+}
+.message-personal > .message-signature {
+  background-color: #c4f0af;
 }
 
 .message-dark {
