--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -47,6 +47,18 @@ message-view {
 
 pre { padding: 0; margin: 0 }
 
+#bottom-alerts {
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  left: 0px;
+  padding: 20px;
+}
+.alert-link {
+  /* Bootstrap sets 500 which doesn't seem to show? */
+  font-weight: bold !important;
+}
+
 .message {
   background-color: #f5f5f5;
   border-radius: 4px;
