--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -57,12 +57,27 @@ pre { padding: 0; margin: 0 }
 .message {
   background-color: #f5f5f5;
   border-radius: 4px;
-  border: 2px solid #ccc;
+  border: 1px solid #ccc;
   margin: 10px 0;
 }
 .message-selected {
   background-color: #fff;
-  border: 2px solid #999;
+  border: 1px solid #888;
+
+  /* Ironically, the simpler effect I wanted to try is harder. For
+     future reference if anyone wants to make the border thicker, this
+     causes two problems:
+
+     1. Margin collapsing means that you can't just fix
+        margin-top/margin-bottom. You need an adjancency selector to fix
+        the next/prev message's margin too. But adjancency selectors only
+        go one direction, until we get subject indicators. So you only
+        correct on one side and fix with position: relative. Yeesh.
+
+     2. getBoundingClientRect() includes the new border, so this messes
+        up narrowing.
+        */
+  box-shadow: 0 0 10px #888;
 }
 
 .message-signature {
@@ -71,11 +86,21 @@ pre { padding: 0; margin: 0 }
   font-size: 80%;
   color: #555;
   text-align: right;
+
+  /* Calculation is border-radius - border, but add a little bit to deal
+     with antialiasing. */
+  border-bottom-left-radius: 3.1px;
+  border-bottom-right-radius: 3.1px;
 }
 .message-header {
   font-weight: bold;
   background-color: #e2e2e2;
   padding: 3px 5px;
+
+  /* Calculation is border-radius - border, but add a little bit to deal
+     with antialiasing. */
+  border-top-left-radius: 3.1px;
+  border-top-right-radius: 3.1px;
 }
 .message-header a {
   color: inherit !important;
