--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -5,6 +5,14 @@
   display: none;
 }
 
+/* Bootstrap is missing these: */
+.col-xs-push-10 {
+  left: 83.33333333333334%;
+}
+.col-xs-pull-2 {
+  right: 16.666666666666664%;
+}
+
 /* Random styling just to position some random box*/
 html, body {
   height: 100%;
@@ -44,6 +52,7 @@ pre { padding: 0; margin: 0 }
 
 #bottom-alerts {
   position: fixed;
+  z-index: 10;
   bottom: 0px;
   width: 100%;
   left: 0px;
@@ -118,7 +127,7 @@ pre { padding: 0; margin: 0 }
 .message-personal > .message-header {
   background-color: inherit !important;
   color: inherit !important;
-  border: none;
+  border: none !important;
 }
 .message-personal > .message-signature {
   background-color: #c4f0af;
@@ -134,31 +143,27 @@ pre { padding: 0; margin: 0 }
 }
 .message-dark > .message-header {
   background-color: #555;
-  border-color: #777;
+  border-color: #777 !important;
   color: #eee;
 }
 .message-dark .message-sender-box {
   background-color: #555;
   color: #eee;
-  border-color: #777;
+  border-color: #777 !important;
 }
 .message-dark .message-body {
   color: #eee;
 }
 .message-dark > .message-signature {
   background-color: #666;
-  border-color: #777;
+  border-color: #777 !important;
   color: #aaa;
 }
 
 .message-row {
-  display: table;
+  overflow: hidden;
 }
-
 .message-body {
-  display: table-cell;
-  vertical-align: top;
-
   padding: 10px;
   /* Undo a lot of bootstrap stuff. */
   border: none;
@@ -166,16 +171,18 @@ pre { padding: 0; margin: 0 }
   background: none;
   font-size: 12px;
 }
+.message-self-sent .message-body {
+  padding-left: 2em;
+}
 .message-sender-box {
-  display: table-cell;
-  vertical-align: top;
-
-  width: 80px;
   padding: 10px;
   background-color: #eee;
   border-right: 1px solid #ccc;
+
+  padding-bottom: 9999px;
+  margin-bottom: -9999px;
 }
-.message-sender-box-right {
+.message-self-sent .message-sender-box {
   border-right: none;
   border-left: 1px solid #ccc;
 }
@@ -188,7 +195,7 @@ pre { padding: 0; margin: 0 }
   margin: 0 auto;
 }
 .message-sender {
-  margin-top: 5px;
+  margin: 5px 0;
   text-align: center;
 }
 
@@ -243,12 +250,14 @@ pre { padding: 0; margin: 0 }
     position: fixed;
     top: 5px;
     right: 5px;
+    z-index: 10;
 }
 
 #recent-states {
     position: fixed;
     top: 5px;
     left: 5px;
+    z-index: 10;
     width: auto !important;
 }
 
