Less of a hammer I guess?

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -161,7 +161,7 @@ pre { padding: 0; margin: 0 }
 }
 
 .message-row {
-  overflow: hidden;
+  overflow-y: hidden;
 }
 .message-body {
   padding: 10px;
