Some more missing ones

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -9,6 +9,12 @@
 .col-xs-push-10 {
   left: 83.33333333333334%;
 }
+.col-xs-push-11 {
+  left: 91.66666666666666%;
+}
+.col-xs-pull-1 {
+  right: 8.333333333333332%;
+}
 .col-xs-pull-2 {
   right: 16.666666666666664%;
 }
