--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -122,6 +122,7 @@ pre { padding: 0; margin: 0 }
 }
 .message-header a {
   color: inherit !important;
+  cursor: pointer;
 }
 
 .message-personal {
