--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -194,6 +194,7 @@ pre { padding: 0; margin: 0 }
   padding: 10px 0;
   background-color: #eee;
   border-right: 1px solid #ccc;
+  font-size: 12px;
 
   padding-bottom: 9999px;
   margin-bottom: -9999px;
