--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -209,6 +209,7 @@ pre { padding: 0; margin: 0 }
 }
 .message-sender {
   margin: 5px 0;
+  font-weight: bold;
   text-align: center;
 }
 .message-unauth {
