Better auth and sass
Broke out authentication into its own controller.
Added sass styling capabilities.

--- a/app/templates/NavBar.hbs
+++ b/app/templates/NavBar.hbs
@@ -1,5 +1,6 @@
 {{#if username}}
+  <div class="btn logout">Logout</div>
   <div class="username">{{username}}</div>
 {{else}}
-  <button class="btn-login">Login</button>
+  <div class="btn login">Login</div>
 {{/if}}
