--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -1,5 +1,6 @@
 <div class="header">
   <span>{{class}} / {{instance}}</span>
+  <span>{{time}}</span>
 </div>
 <div class="content">
   <div class="sender">
