Model cache management
Added logic for managing the size of the message cache kept in the backbone collection.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -100,7 +100,8 @@
 .message-view {
   width: 100%;
   max-width: 800px;
-  margin: auto; }
+  margin: auto;
+  max-height: 200px; }
 
 html, body {
   width: 100%;
