--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -1,15 +1,17 @@
 <div class="header">
   <span>{{class}} / {{instance}}</span>
-  <span>{{time}}</span>
+  <span class="time">{{time}}</span>
 </div>
 <div class="content">
   <div class="sender">
     {{sender}}
   </div>
-  <div class="message">
-    {{message}}
-  </div>
-  <div class="signature">
-    {{signature}}
+  <div class="message-block">
+    <div class="message">
+      {{message}}
+    </div>
+    <div class="signature">
+      {{signature}}
+    </div>
   </div>
 </div>
