--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -1,6 +1,49 @@
 .message-view {
   width: 100%;
-  max-width: 800px;
+  max-width: 650px;
   margin: auto;
-  max-height: 200px;
+  box-sizing: border-box;
+  padding: 5px;
+  border: 1px solid black;
+
+  .header{
+    border-bottom: 1px solid black;
+    box-sizing: border-box;
+    margin-left: -5px;
+    margin-right: -5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    height: 20px;
+    line-height: 15px;
+
+    .time {
+      float: right;
+    }
+  }
+
+  .content {
+    display: table-row;
+
+    .sender {
+      width: 130px;
+      padding: 3px;
+      box-sizing: border-box;
+    }
+
+    .message-block {
+      display: table-cell;
+      width: 100%;
+
+      .message {
+        padding: 3px;
+        margin-bottom: 40px;
+        word-break: break-all;
+        word-wrap: break-word;
+      }
+
+      .signature {
+        text-align: right;
+      }
+    }
+  }
 }
