Styling, comments, etc

--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -1,6 +1,7 @@
 <div class="header">
-  <span>{{class}} / {{instance}}</span>
-  <span class="time">{{time}}</span>
+  <div class="msg-class">{{class}}</div>
+  <div class="msg-instance">{{instance}}</div>
+  <span class="time">{{prettyTime}}</span>
 </div>
 <div class="content">
   <div class="sender">
