--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -3,21 +3,43 @@
   max-width: 650px;
   margin: auto;
   box-sizing: border-box;
-  padding: 5px;
   border: 1px solid black;
 
   .header{
-    border-bottom: 1px solid black;
     box-sizing: border-box;
-    margin-left: -5px;
-    margin-right: -5px;
-    padding-left: 5px;
-    padding-right: 5px;
-    height: 20px;
-    line-height: 15px;
+    height: $msg-header-height;
+    line-height: $msg-header-height;
+    background-color: #DDD;
 
     .time {
       float: right;
+      padding-right: 5px;
+    }
+
+    .msg-class {
+      background-color: #BBB;
+      display: inline-block;
+      position: relative;
+      padding-left: 5px;
+      padding-right: 3px;
+      box-sizing: border-box;
+
+      &:after {
+        content: "";
+        border-left: 5px solid #BBB;
+        border-bottom: $msg-header-height solid transparent;
+        display: block;
+        width: 0;
+        height: 0;
+        position: absolute;
+        top: 0;
+        right: -5px;
+      }
+    }
+
+    .msg-instance {
+      display: inline-block;
+      padding-left: 3px;
     }
   }
 
