--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -102,19 +102,35 @@
   max-width: 650px;
   margin: auto;
   box-sizing: border-box;
-  padding: 5px;
   border: 1px solid black; }
   .message-view .header {
-    border-bottom: 1px solid black;
     box-sizing: border-box;
-    margin-left: -5px;
-    margin-right: -5px;
-    padding-left: 5px;
-    padding-right: 5px;
-    height: 20px;
-    line-height: 15px; }
+    height: 25px;
+    line-height: 25px;
+    background-color: #DDD; }
     .message-view .header .time {
-      float: right; }
+      float: right;
+      padding-right: 5px; }
+    .message-view .header .msg-class {
+      background-color: #BBB;
+      display: inline-block;
+      position: relative;
+      padding-left: 5px;
+      padding-right: 3px;
+      box-sizing: border-box; }
+      .message-view .header .msg-class:after {
+        content: "";
+        border-left: 5px solid #BBB;
+        border-bottom: 25px solid transparent;
+        display: block;
+        width: 0;
+        height: 0;
+        position: absolute;
+        top: 0;
+        right: -5px; }
+    .message-view .header .msg-instance {
+      display: inline-block;
+      padding-left: 3px; }
   .message-view .content {
     display: table-row; }
     .message-view .content .sender {
